...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q8g-3N-Iiy">
                                <rect key="frame" x="21" y="194" width="333" height="116"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="x" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="p6X-aS-Knp">
                                        <rect key="frame" x="25" y="69" width="51" height="30"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" identifier="leftSideRatioName" label="leftSideRatioName"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="textFieldChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="6Gz-vJ-oh1"/>
                                        </connections>
...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bCg-im-SwV">
                                        <rect key="frame" x="84.666666666666671" y="69" width="47.000000000000014" height="30"/>
                                        <accessibility key="accessibilityConfiguration" hint="What ratio of THC do you want?" identifier="desiredTHCTextField" label="Desired THC factor"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="47" id="2BL-xZ-Emp"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
...
                                            <outlet property="delegate" destination="BYZ-38-t0r" id="rhK-nU-xDv"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="y" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Gyw-Tw-YE7">
                                        <rect key="frame" x="147" y="69" width="51" height="30"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" identifier="rightSideRatioName" label="rightSideRatioName"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                        <connections>
                                            <action selector="textFieldChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="QuK-13-9dN"/>
                                        </connections>
...
                                        <connections>
                                            <segue destination="FCN-Cv-2h1" kind="presentation" id="mIn-Hr-vbk"/>
                                        </connections>
                                    </button>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KzS-Am-VTj">
                                        <rect key="frame" x="201.33333333333334" y="69" width="47" height="30"/>
                                        <accessibility key="accessibilityConfiguration" hint="To what ratio of CBD do you want?" identifier="desiredCBDTextField" label="Desired CBD factor"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="47" id="UjU-iE-cFL"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="decimalPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
...
                                    <constraint firstItem="RrU-Bb-ewh" firstAttribute="top" relation="lessThanOrEqual" secondItem="Jre-l6-RhW" secondAttribute="bottom" constant="9" id="nzW-QE-m3d"/>
                                    <constraint firstItem="Jre-l6-RhW" firstAttribute="top" relation="greaterThanOrEqual" secondItem="0s8-gb-gFX" secondAttribute="top" constant="10" id="q1f-Jg-myN"/>
                                </constraints>
                            </view>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="14b-eY-yaa">
                                <rect key="frame" x="112.66666666666669" y="438" width="150" height="50"/>
                                <accessibility key="accessibilityConfiguration" hint="Continues to the next screen." identifier="nextButton" label="Next"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="150" id="Tsc-Lv-Tab"/>
                                    <constraint firstAttribute="height" constant="50" id="qpj-v6-e4o"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                <state key="normal" title="Next">
...
